--- a/notebook/13_데이터_수집_OPEN_API.ipynb
+++ b/notebook/13_데이터_수집_OPEN_API.ipynb
@@ -22,10 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -34,10 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# API 확인\n",
     "import os \n",
@@ -307,6 +326,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b426ecae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d6e5a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getUrl(start, end):\n",
+    "    return f\"{base_url}/{key}/{request_type}/{service}/{start}/{end}\"\n",
+    "\n",
+    "def save(item_list):\n",
+    "    df = pd.DataFrame(item_list)\n",
+    "    df.to_csv(\n",
+    "        \"../data/seoul_open_square.csv\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "26",
    "metadata": {},
    "outputs": [],
@@ -318,7 +364,16 @@
     "for i in range(4):\n",
     "    end = start + 1000 - 1\n",
     "    print(start, end)\n",
-    "    start += 1000"
+    "    url = getUrl(start, end)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "    start += 1000\n",
+    "\n",
+    "print(len(item_list))\n",
+    "\n",
+    "save(item_list)\n",
+    "    "
    ]
   },
   {
@@ -333,13 +388,49 @@
     "\n",
     "for start in range(1, 4001, 1000):\n",
     "    end = start + 1000 - 1 \n",
-    "    print(start, end)"
+    "    print(start, end)\n",
+    "    url = getUrl(start, end)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "\n",
+    "print(len(item_list))\n",
+    "\n",
+    "save(item_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df8a1bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_list = []\n",
+    "\n",
+    "start = 1\n",
+    "count = 0\n",
+    "max_count = 4\n",
+    "\n",
+    "while True:\n",
+    "    if count > max_count - 1:\n",
+    "        break\n",
+    "    end = start + 1000 -1\n",
+    "    count += 1\n",
+    "    url = getUrl(start, end)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "\n",
+    "print(len(item_list))\n",
+    "\n",
+    "save(item_list)   "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pj01-data-analysis (3.11.14)",
+   "display_name": "data_analysis",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
