--- a/notebook/13_데이터_수집_OPEN_API.ipynb
+++ b/notebook/13_데이터_수집_OPEN_API.ipynb
@@ -307,6 +307,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b426ecae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d6e5a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getUrl(start, end):\n",
+    "    return f\"{base_url}/{key}/{request_type}/{service}/{start}/{end}\"\n",
+    "\n",
+    "def save(item_list):\n",
+    "    df = pd.DataFrame(item_list)\n",
+    "    df.to_csv(\n",
+    "        \"../data/seoul_open_square.csv\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "26",
    "metadata": {},
    "outputs": [],
@@ -318,7 +345,16 @@
     "for i in range(4):\n",
     "    end = start + 1000 - 1\n",
     "    print(start, end)\n",
-    "    start += 1000"
+    "    url = getUrl(start, end)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "    start += 1000\n",
+    "\n",
+    "print(len(item_list))\n",
+    "\n",
+    "save(item_list)\n",
+    "    "
    ]
   },
   {
@@ -333,7 +369,42 @@
     "\n",
     "for start in range(1, 4001, 1000):\n",
     "    end = start + 1000 - 1 \n",
-    "    print(start, end)"
+    "    print(start, end)\n",
+    "    url = getUrl(start, end)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "\n",
+    "print(len(item_list))\n",
+    "\n",
+    "save(item_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df8a1bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_list = []\n",
+    "\n",
+    "start = 1\n",
+    "count = 0\n",
+    "\n",
+    "while True:\n",
+    "    if count < 4:\n",
+    "        break\n",
+    "    end = start + 1000 -1\n",
+    "    count += 1\n",
+    "    url = getUrl(start, end)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "\n",
+    "print(len(item_list))\n",
+    "\n",
+    "save(item_list)   "
    ]
   }
  ],
