--- a/notebook/13_데이터_수집_OPEN_API.ipynb
+++ b/notebook/13_데이터_수집_OPEN_API.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uv add requests python-dotenv \n",
+    "# uv add requests python-dotenv\n",
     "## python-dotenv : .env에 있는 정보를 가져오는 도구\n",
     "## requests: API 요청하는 도구"
    ]
@@ -40,10 +40,10 @@
    "outputs": [],
    "source": [
     "# API 확인\n",
-    "import os \n",
+    "import os\n",
     "\n",
     "print(os.getenv(\"SEOUL_PUBLIC_API_KEY\"))\n",
-    "## !!!! API 유출 방지를 위해 출력이 확인되면 출력 내용을 지워야 한다. "
+    "## !!!! API 유출 방지를 위해 출력이 확인되면 출력 내용을 지워야 한다."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests \n",
+    "import requests\n",
     "\n",
     "response = requests.get(url)\n",
     "print(response)"
@@ -212,7 +212,7 @@
     "request_type = \"json\"\n",
     "service = \"tbCycleStationInfo\"\n",
     "start_index = 1\n",
-    "end_index = 1001 # 3210, 1001로 바꿔보세요.\n",
+    "end_index = 1001  # 3210, 1001로 바꿔보세요.\n",
     "\n",
     "url = f\"{base_url}/{key}/{request_type}/{service}/{start_index}/{end_index}\"\n",
     "print(url)"
@@ -233,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests \n",
+    "import requests\n",
     "\n",
     "response = requests.get(url)\n",
     "print(response)"
@@ -268,7 +268,7 @@
    "source": [
     "# 한 번 요청할 때 1000개만 가져올 수 있다. -- 반복문\n",
     "## 전체가 3210개 -- 몇 번 요청 4\n",
-    "## start - end \n",
+    "## start - end\n",
     "## 1 - 1000\n",
     "## 1001 - 2000\n",
     "## 2001 - 3000\n",
@@ -282,16 +282,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 0. start = 1 변수를 만든다. item_list를 만든다. \n",
-    "## 1. 4번 반복하는 반복문을 만든다. \n",
-    "## 2. 반복할 때마다 end를 생성하고, start, end를 출력한다. \n",
-    "## 3. start, end가 반영된 URL를 만든다. \n",
-    "## 4. URL을 요청한다.  \n",
-    "## 5. 응답받은 데이터에서 items를 추출한다. \n",
-    "## 6. 그리고 start를 업데이트한다. \n",
-    "## 7. 반복문이 끝난 후, item_list의 개수를 출력한다. - 3210개가 맞는지 확인한다. \n",
-    "## 8. 데이터프레임으로 바꾼다. \n",
-    "## 9. 데이터를 저장한다. "
+    "## 0. start = 1 변수를 만든다. item_list를 만든다.\n",
+    "## 1. 4번 반복하는 반복문을 만든다.\n",
+    "## 2. 반복할 때마다 end를 생성하고, start, end를 출력한다.\n",
+    "## 3. start, end가 반영된 URL를 만든다.\n",
+    "## 4. URL을 요청한다.\n",
+    "## 5. 응답받은 데이터에서 items를 추출한다.\n",
+    "## 6. 그리고 start를 업데이트한다.\n",
+    "## 7. 반복문이 끝난 후, item_list의 개수를 출력한다. - 3210개가 맞는지 확인한다.\n",
+    "## 8. 데이터프레임으로 바꾼다.\n",
+    "## 9. 데이터를 저장한다."
    ]
   },
   {
@@ -324,11 +324,10 @@
     "def getUrl(start, end):\n",
     "    return f\"{base_url}/{key}/{request_type}/{service}/{start}/{end}\"\n",
     "\n",
+    "\n",
     "def save(item_list):\n",
     "    df = pd.DataFrame(item_list)\n",
-    "    df.to_csv(\n",
-    "        \"../data/seoul_open_square.csv\"\n",
-    "    )"
+    "    df.to_csv(\"../data/seoul_open_data_square.csv\")"
    ]
   },
   {
@@ -340,7 +339,7 @@
    "source": [
     "# Hint:\n",
     "item_list = []\n",
-    "start = 1 \n",
+    "start = 1\n",
     "\n",
     "for i in range(4):\n",
     "    end = start + 1000 - 1\n",
@@ -348,13 +347,12 @@
     "    url = getUrl(start, end)\n",
     "    response = requests.get(url)\n",
     "    data = response.json()\n",
-    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "    item_list.extend(data[\"stationInfo\"][\"row\"])\n",
     "    start += 1000\n",
     "\n",
     "print(len(item_list))\n",
     "\n",
-    "save(item_list)\n",
-    "    "
+    "save(item_list)"
    ]
   },
   {
@@ -368,12 +366,12 @@
     "item_list = []\n",
     "\n",
     "for start in range(1, 4001, 1000):\n",
-    "    end = start + 1000 - 1 \n",
+    "    end = start + 1000 - 1\n",
     "    print(start, end)\n",
     "    url = getUrl(start, end)\n",
     "    response = requests.get(url)\n",
     "    data = response.json()\n",
-    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "    item_list.extend(data[\"stationInfo\"][\"row\"])\n",
     "\n",
     "print(len(item_list))\n",
     "\n",
@@ -396,22 +394,23 @@
     "while True:\n",
     "    if count > max_count - 1:\n",
     "        break\n",
-    "    end = start + 1000 -1\n",
-    "    count += 1\n",
+    "    end = start + 1000 - 1\n",
     "    url = getUrl(start, end)\n",
     "    response = requests.get(url)\n",
     "    data = response.json()\n",
-    "    item_list.append(data[\"stationInfo\"][\"row\"])\n",
+    "    item_list.extend(data[\"stationInfo\"][\"row\"])\n",
+    "    start += 1000\n",
+    "    count += 1\n",
     "\n",
     "print(len(item_list))\n",
     "\n",
-    "save(item_list)   "
+    "save(item_list)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_analysis",
+   "display_name": "data-analysis (3.11.14)",
    "language": "python",
    "name": "python3"
   },
@@ -425,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
