--- a/notebook/13_데이터_수집_OPEN_API.ipynb
+++ b/notebook/13_데이터_수집_OPEN_API.ipynb
@@ -236,7 +236,8 @@
     "import requests\n",
     "\n",
     "response = requests.get(url)\n",
-    "print(response)"
+    "print(response)\n",
+    "print(response.status_code)\n"
    ]
   },
   {
@@ -405,6 +406,746 @@
     "print(len(item_list))\n",
     "\n",
     "save(item_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31",
+   "metadata": {},
+   "source": [
+    "# 2. 공공데이터포털"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(os.getenv(\"PUBLIC_DATA_API_KEY\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34",
+   "metadata": {},
+   "source": [
+    "## 1) URL 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = (\n",
+    "    \"http://apis.data.go.kr/B552061/frequentzoneLgrViolt/getRestFrequentzoneLgrViolt\"\n",
+    ")\n",
+    "\n",
+    "serviceKey = os.getenv(\"PUBLIC_DATA_API_KEY\")\n",
+    "searchYearCd = 2017\n",
+    "siDo = 11\n",
+    "guGun = 680\n",
+    "request_type = \"json\"\n",
+    "numOfRows = 12\n",
+    "pageNo = 1\n",
+    "\n",
+    "# base_url?요청파라미터1=값&요청파라미터2=값&....\n",
+    "url = f\"{base_url}?ServiceKey={serviceKey}&searchYearCd={searchYearCd}&siDo={siDo}&guGun={guGun}&type={request_type}&numOfRows={numOfRows}&pageNo={pageNo}\"\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36",
+   "metadata": {},
+   "source": [
+    "## 2) 요청하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38",
+   "metadata": {},
+   "source": [
+    "## 3) 데이터 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = response.json()\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41",
+   "metadata": {},
+   "source": [
+    "## 4) 데이터 수집하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(data[\"items\"][\"item\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_list = data[\"items\"][\"item\"]\n",
+    "print(f\"총 {len(item_list)} 개의 데이터를 수집했습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45",
+   "metadata": {},
+   "source": [
+    "## 5) 데이터프레임 만들기 & 저장하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(item_list)\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\n",
+    "    \"../data/한국도로교통공단_법규위반별 교통사고 다발지역_1168010100(260127).csv\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연도 기간을 설정해서 반복문으로 데이터를 수집할 수 있나요?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": [
+    "# 3. 네이버 API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50",
+   "metadata": {},
+   "source": [
+    "## 1) URL 만들기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51",
+   "metadata": {},
+   "source": [
+    "### 방법 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib\n",
+    "\n",
+    "base_url = \"https://openapi.naver.com/v1/search/news.json\"\n",
+    "\n",
+    "query = urllib.parse.quote(\"인공지능\")  # 인코딩 필요\n",
+    "display = 100\n",
+    "start = 1\n",
+    "sort = \"sim\"\n",
+    "\n",
+    "url = f\"{base_url}?query={query}&display={display}&start={start}&sort={sort}\"\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53",
+   "metadata": {},
+   "source": [
+    "### 방법 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = \"https://openapi.naver.com/v1/search/news.json\"\n",
+    "\n",
+    "params = {\n",
+    "    \"query\": \"인공지능\",  # 인코딩 안해도 됨\n",
+    "    \"display\": 100,\n",
+    "    \"start\": 1,\n",
+    "    \"sort\": \"sim\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55",
+   "metadata": {},
+   "source": [
+    "## 2) 요청하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 헤더\n",
+    "headers = {\n",
+    "    \"X-Naver-Client-Id\": os.getenv(\"NAVER_CLIENT_ID\"),\n",
+    "    \"X-Naver-Client-Secret\": os.getenv(\"NAVER_CLIENT_SECRET\"),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57",
+   "metadata": {},
+   "source": [
+    "### 방법 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59",
+   "metadata": {},
+   "source": [
+    "### 방법 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.get(base_url, params=params, headers=headers)\n",
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61",
+   "metadata": {},
+   "source": [
+    "## 3) 데이터 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63",
+   "metadata": {},
+   "source": [
+    "## 4) 데이터 수집하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_list = data[\"items\"]\n",
+    "print(f\"총 {len(item_list)}개 데이터를 수집했습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66",
+   "metadata": {},
+   "source": [
+    "## 5) 데이터 프레임 만들기 & 저장하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(item_list)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68",
+   "metadata": {},
+   "source": [
+    "# 4. Youtube API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.getenv(\"YOUTUBE_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71",
+   "metadata": {},
+   "source": [
+    "## 1) URL 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = \"https://www.googleapis.com/youtube/v3/commentThreads\"\n",
+    "\n",
+    "part = \"snippet\"\n",
+    "videoId = \"_xOnGP_Js1A\"  # 댓글 수집할 영상\n",
+    "key = os.getenv(\"YOUTUBE_API_KEY\")\n",
+    "maxResults = 100  # 최대 100개\n",
+    "textFormat = \"plainText\"\n",
+    "\n",
+    "url = f\"{base_url}?part={part}&videoId={videoId}&key={key}&maxResults={maxResults}&textFormat={textFormat}\"\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    \"part\": \"snippet\",\n",
+    "    \"videoId\": \"_xOnGP_Js1A\",\n",
+    "    \"key\": os.getenv(\"YOUTUBE_API_KEY\"),\n",
+    "    \"maxResults\": 100,\n",
+    "    \"textFormat\": \"plainText\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74",
+   "metadata": {},
+   "source": [
+    "## 2) 요청하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests as req\n",
+    "\n",
+    "res = req.get(url)\n",
+    "print(res.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests as req\n",
+    "\n",
+    "res = req.get(base_url, params=params)\n",
+    "print(res.status_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77",
+   "metadata": {},
+   "source": [
+    "## 3) 데이터 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = res.json()\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80",
+   "metadata": {},
+   "source": [
+    "## 4) 데이터 수집하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = data[\"items\"]\n",
+    "items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items[0][\"snippet\"][\"topLevelComment\"][\"snippet\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_list = []\n",
+    "for item in items:\n",
+    "    item_list.append(item[\"snippet\"][\"topLevelComment\"][\"snippet\"])\n",
+    "\n",
+    "item_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85",
+   "metadata": {},
+   "source": [
+    "## 5) 데이터 프레임 만들기 & 저장하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(items)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(item_list)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88",
+   "metadata": {},
+   "source": [
+    "## 6) 반복문 활용하여 댓글 많이 수집하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Youtube API 댓글 수집은 한 번 요청할 때 maxResults 100까지만 쓸 수 있다.\n",
+    "# 1번 요청하고, 그 다음 요청할 때 nextPageToken 파라미터도 함께 넣어줘야 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 변수 설정: nextPageToken=None, data_list(데이터수집바구니), max_rep(최대반복수)\n",
+    "# 2. max_rep만큼 반복문\n",
+    "# 3. API 요청\n",
+    "# 4. 응답받아온다.\n",
+    "# 5. nextPageToken 추출해서 변수 값을 업데이트 한다. nextPageToken=data[\"nextPageToken\"]\n",
+    "#    만약에 data[\"nextPageToken\"]이 없다면 반복문 중지\n",
+    "# 6. 데이터를 수집한다.\n",
+    "# 7. data_list에 담는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nextPageToken = None\n",
+    "data_list = []\n",
+    "max_req = 100\n",
+    "p = params\n",
+    "\n",
+    "for i in range(max_req):\n",
+    "    res = req.get(base_url, params=p)\n",
+    "    items = res.json()\n",
+    "    data = item[\"snippet\"][\"topLevelComment\"][\"snippet\"]\n",
+    "    nextPageToken = data.get(\"nextPageToken\")\n",
+    "    p = {**params, \"pageToken\": nextPageToken}\n",
+    "    data_list.extend(data)\n",
+    "\n",
+    "print(data_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YouTube 댓글 수집하기\n",
+    "import requests\n",
+    "\n",
+    "# 1. 변수 설정\n",
+    "base_url = \"https://www.googleapis.com/youtube/v3/commentThreads\"\n",
+    "\n",
+    "part = \"snippet\"\n",
+    "videoId = \"_xOnGP_Js1A\"  # 댓글 수집할 영상\n",
+    "key = os.getenv(\"YOUTUBE_API_KEY\")\n",
+    "maxResults = 100  # 최대 100개\n",
+    "textFormat = \"plainText\"\n",
+    "nextPageToken = None\n",
+    "\n",
+    "data_list = []\n",
+    "max_rep = 10\n",
+    "\n",
+    "# 2. max_rep만큼 반복문\n",
+    "for i in range(max_rep):\n",
+    "    print(f\"{i + 1} 번째 데이터 수집을 시작합니다.\")\n",
+    "    url = f\"{base_url}?part={part}&videoId={videoId}&key={key}&maxResults={maxResults}&textFormat={textFormat}&nextPageToken={nextPageToken}\"\n",
+    "\n",
+    "    # 3. API 요청\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        # 4. 응답받아온다.\n",
+    "        data = response.json()\n",
+    "\n",
+    "        # 5. nextPageToken 추출해서 변수 값을 업데이트 한다.\n",
+    "        nextPageToken = data.get(\"nextPageToken\")\n",
+    "\n",
+    "        # 6. 데이터를 수집한다.\n",
+    "        items = data[\"items\"]\n",
+    "        item_list = []\n",
+    "        for item in items:\n",
+    "            item_list.append(item[\"snippet\"][\"topLevelComment\"][\"snippet\"])\n",
+    "\n",
+    "        print(f\"\\t{len(item_list)} 개의 데이터를 수집했습니다.\")\n",
+    "\n",
+    "        # 7. data_list에 담는다.\n",
+    "        data_list.extend(item_list)\n",
+    "\n",
+    "        if nextPageToken is None:\n",
+    "            print(\"다음 페이지가 없어 종료합니다.\")\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
    ]
   }
  ],
