--- a/notebook/homework/13_데이터_수집_OPEN_API.ipynb
+++ b/notebook/homework/13_데이터_수집_OPEN_API.ipynb
@@ -13,12 +13,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_url = \"https://www.data.go.kr/data/15077871/openapi.do\""
+    "base_url = \"http://apis.data.go.kr/1741000/StanReginCd/getStanReginCdList\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b14cbc11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3f6a3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "params = {\n",
+    "    \"serviceKey\": os.getenv(\"PUBLIC_DATA_API_KEY\"),\n",
+    "    \"pageNo\": 1,\n",
+    "    \"numOfRows\": 3,\n",
+    "    \"type\": \"json\",\n",
+    "    \"locatadd_nm\": \"서울특별시\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "17a23990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "403\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "\n",
+    "res = req.get(base_url, params=params)\n",
+    "print(res.status_code)\n",
+    "\n",
+    "# import requests\n",
+    "\n",
+    "# url = 'http://apis.data.go.kr/1741000/StanReginCd/getStanReginCdList'\n",
+    "# params ={'serviceKey' : '서비스키', 'pageNo' : '1', 'numOfRows' : '3', 'type' : 'xml', 'locatadd_nm' : '서울특별시' }\n",
+    "\n",
+    "# response = requests.get(url, params=params)\n",
+    "# print(response.content)"
    ]
   },
   {
@@ -41,8 +111,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "data_analysis (3.11.14)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
