--- a/notebook/homework/13_데이터_수집_OPEN_API.ipynb
+++ b/notebook/homework/13_데이터_수집_OPEN_API.ipynb
@@ -41,14 +41,17 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from urllib.parse import unquote\n",
     "\n",
     "params = {\n",
-    "    \"serviceKey\": os.getenv(\"PUBLIC_DATA_API_KEY\"),\n",
+    "    \"serviceKey\": unquote(os.getenv(\"PUBLIC_DATA_API_KEY\")),\n",
     "    \"pageNo\": 1,\n",
     "    \"numOfRows\": 3,\n",
     "    \"type\": \"json\",\n",
     "    \"locatadd_nm\": \"서울특별시\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "print(params)"
    ]
   },
   {
@@ -58,9 +61,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "serviceKey = os.getenv(\"PUBLIC_DATA_API_KEY\")\n",
+    "print(serviceKey)\n",
+    "pageNo = (1,)\n",
+    "numOfRows = 3\n",
+    "type = \"json\"\n",
+    "locatadd_nm = \"서울특별시\"\n",
+    "\n",
+    "url = f\"{base_url}?ServiceKey={serviceKey}&pageNo={pageNo}&numOfRows={numOfRows}&type={type}&locatadd_nm={locatadd_nm}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests as req\n",
     "\n",
     "res = req.get(base_url, params=params)\n",
+    "print(res.status_code)\n",
+    "\n",
+    "res = req.get(url)\n",
     "print(res.status_code)\n",
     "\n",
     "# import requests\n",
@@ -74,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "### [Naver API]\n",
@@ -83,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "### [Youtube API]\n",
@@ -93,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_analysis (3.11.14)",
+   "display_name": "data-analysis (3.11.14)",
    "language": "python",
    "name": "python3"
   },
